--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql:///vjdol
-jdbc.user=huoshan
-jdbc.password=huoshan
+jdbc.url=jdbc:mysql:///voj
+jdbc.user=root
+jdbc.password=88888888
